# osv-lib

./: .gitignore  .isort.cfg  .mypy.ini  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.lowest.txt  tox.ini
.github/workflows/: manual-release-candidate.yml  python.yml  release.yml
docs/: changelog.rst  conf.py  index.rst  install.rst  support.rst  usage.rst
docs/_build/doctrees/: changelog.doctree  configuration.doctree  data-sources.doctree  environment.pickle  index.doctree  install.doctree  support.doctree  usage.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/vexy/: index.doctree
docs/_build/doctrees/autoapi/vexy/__main__/: index.doctree
docs/_build/doctrees/autoapi/vexy/client/: index.doctree
docs/_build/doctrees/autoapi/vexy/parser/: index.doctree
docs/_build/doctrees/autoapi/vexy/sources/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  configuration.html  data-sources.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  support.html  usage.html
docs/_build/html/_modules/: index.html  vexy.html
docs/_build/html/_modules/vexy/: client.html  parser.html  sources.html
docs/_build/html/_modules/vexy/parser/: cyclonedx.html
docs/_build/html/_modules/vexy/sources/: base.html  ossindex.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/vexy/: index.html
osv/: __init__.py  api.py  exception.py  model.py  py.typed  serializer.py
tests/: __init__.py  mocks.py  test_deserialisation.py  test_model.py  test_osv_api.py
tests/fixtures/: GHSA-vh95-rmgr-6w4m.json  response-query-npm-minimist-0.0.8.json  response-querybatch-npm-minimist-0.0.8.json  response-vulns-OSV-2020-111.json
(+18 files in other folders)
